force-app/main/default/objects/Report_Pump__c/Report_Pump__c.object-meta.xml
<CustomObject>
    <label>Report - Pump</label>
    <nameField>
        <label>Inspection Report - Pump Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Report - Pumps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>