force-app/main/default/objects/Report_Pump__c/fields/Asset_number__c.field-meta.xml
<CustomField>
    <fullName>Asset_number__c</fullName>
    <label>Asset#</label>
    <length>40</length>
    <type>Text</type>
</CustomField>