force-app/main/default/objects/Report_Pump__c/fields/Associated_Customer__c.field-meta.xml
<CustomField>
    <fullName>Associated_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Report - Pumps (Associated Customer)</relationshipLabel>
    <relationshipName>Report_Pumps1</relationshipName>
    <type>Lookup</type>
</CustomField>