force-app/main/default/objects/Report_Pump__c/fields/Back_Liner__c.field-meta.xml
<CustomField>
    <fullName>Back_Liner__c</fullName>
    <label>Back Liner</label>
    <type>TextArea</type>
</CustomField>