force-app/main/default/objects/Report_Pump__c/fields/Cut_Water__c.field-meta.xml
<CustomField>
    <fullName>Cut_Water__c</fullName>
    <label>Cut Water</label>
    <type>TextArea</type>
</CustomField>