force-app/main/default/objects/Report_Pump__c/fields/Equipment_Product__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Product__c</fullName>
    <label>Equipment (Product#)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>