force-app/main/default/objects/Report_Pump__c/fields/Equipment_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Remarks__c</fullName>
    <label>Equipment Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>