force-app/main/default/objects/Report_Pump__c/fields/Impeller_Discharge_Condition__c.field-meta.xml
<CustomField>
    <fullName>Impeller_Discharge_Condition__c</fullName>
    <label>Impeller Discharge Condition</label>
    <type>TextArea</type>
</CustomField>