force-app/main/default/objects/Report_Pump__c/fields/Impeller_Suction_Eye__c.field-meta.xml
<CustomField>
    <fullName>Impeller_Suction_Eye__c</fullName>
    <label>Impeller Suction Eye Condition</label>
    <type>TextArea</type>
</CustomField>