force-app/main/default/objects/Report_Pump__c/fields/Impeller_Vanes_Condition__c.field-meta.xml
<CustomField>
    <fullName>Impeller_Vanes_Condition__c</fullName>
    <label>Impeller Vanes Condition</label>
    <type>TextArea</type>
</CustomField>