force-app/main/default/objects/Report_Pump__c/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <label>Manufacturer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Report - Pumps</relationshipLabel>
    <relationshipName>Report_Pumps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>