force-app/main/default/objects/Report_Pump__c/fields/Original_Tag_of_Pump__c.field-meta.xml
<CustomField>
    <fullName>Original_Tag_of_Pump__c</fullName>
    <label>Original Tag of Pump</label>
    <type>TextArea</type>
</CustomField>