force-app/main/default/objects/Report_Pump__c/fields/Pump_Application__c.field-meta.xml
<CustomField>
    <fullName>Pump_Application__c</fullName>
    <label>Pump Application</label>
    <length>80</length>
    <type>Text</type>
</CustomField>