force-app/main/default/objects/Report_Pump__c/fields/Pump_Model__c.field-meta.xml
<CustomField>
    <fullName>Pump_Model__c</fullName>
    <label>Pump Model</label>
    <length>40</length>
    <type>Text</type>
</CustomField>