force-app/main/default/objects/Report_Pump__c/fields/Pump_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Pump_Serial_Number__c</fullName>
    <label>Pump Serial Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>