force-app/main/default/objects/Report_Pump__c/fields/Pump_Tag_ID__c.field-meta.xml
<CustomField>
    <fullName>Pump_Tag_ID__c</fullName>
    <label>Pump Tag ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>