force-app/main/default/objects/Report_Pump__c/fields/Pump_Type__c.field-meta.xml
<CustomField>
    <fullName>Pump_Type__c</fullName>
    <label>Pump Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Horizontal</fullName>
            </value>
            <value>
                <fullName>Vertical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>