force-app/main/default/objects/Report_Pump__c/fields/Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewed By:</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Report_Pumps</relationshipName>
    <type>Lookup</type>
</CustomField>