force-app/main/default/objects/Report_Pump__c/fields/Seal_Condition__c.field-meta.xml
<CustomField>
    <fullName>Seal_Condition__c</fullName>
    <label>Seal Condition</label>
    <type>TextArea</type>
</CustomField>