force-app/main/default/objects/Report_Pump__c/fields/Suction_Liner_Condition__c.field-meta.xml
<CustomField>
    <fullName>Suction_Liner_Condition__c</fullName>
    <label>Suction Liner Condition</label>
    <type>TextArea</type>
</CustomField>