force-app/main/default/objects/Report_Pump__c/fields/Volute_Liner__c.field-meta.xml
<CustomField>
    <fullName>Volute_Liner__c</fullName>
    <label>Volute Liner</label>
    <type>TextArea</type>
</CustomField>