force-app/main/default/objects/Report_Pump__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order #</label>
    <referenceTo>Work_Order__c</referenceTo>
    <relationshipLabel>Report - Pumps</relationshipLabel>
    <relationshipName>Report_Pumps</relationshipName>
    <type>Lookup</type>
</CustomField>