force-app/main/default/objects/Report_Pump__c/fields/Write_Image_Title__c.field-meta.xml
<CustomField>
    <fullName>Write_Image_Title__c</fullName>
    <label>Write Image Title</label>
    <type>TextArea</type>
</CustomField>